described all yogas now conclusion continued

--- a/bindu.bib
+++ b/bindu.bib
@@ -21,13 +21,25 @@ series={Nagoya Studies in Indian Culture and Buddhism},
 volume={13}.
 publisher={Nagoya University, Department of Indian Philosophy},
 address={Nagoya},
-keywirds={seclit},
+keywords={seclit},
+}
+
+@incollection{hacker1979,
+  author    = {Hacker, Paul},
+  title     = {Inklusivismus},
+  year      = {1983},
+  editor    = {Gerhardt Oberhammer},
+  booktitle = {Inklusivismus: Eine indische Denkform},
+  publisher = {{Institut für Indologie der Universität Wien, Sammlung De Nobili; Commission Agents E.J. Brill},
+  address   = {Wien},
+  year      = {1983},
+  note      = {Posthum}
+ keywords    = {seclit},
 }
 
 
 @article{endo1998,
-title={The Medieval Yoga-s and the Patanjala-Yoga: Narayana
-Tirtha’s Interpretation of the Yogasutra.}, 
+title={The Medieval Yoga-s and the Patanjala-Yoga: Narayana Tirtha’s Interpretation of the Yogasutra.}, 
 author= {Ko, Endo},  
 year={1998},
 pages={25--39},
