--- a/intro.tex
+++ b/intro.tex
@@ -187,17 +187,17 @@ Herstellung: \ \ BoD – Books on Demand GmbH, Norderstedt  \\
 \cleardoublepage
 
 \section{General remarks}
-The \textit{Yogatattvabindu} is a premodern Sanskrit Yoga text on Rājayoga that was written in the first half of the seventeenth century\footnote{The dating of the text is discussed on p.\pageref{dating}.} in northern India.\footnote{The detailed discussion of the place of origin is found on p.\pageref{placeoforigin}.} The most salient feature of the work that makes it historically significant is its highly differentiated taxonomy of types of Yoga. In the \textit{Yogatattvabindu}'s introduction, most manuscripts name fifteen types of Yoga, presented as subtypes of Rājayoga. The text is a yogic compendium written in a mix of mainly prose and 41 verses in textbook-style, where its 58 topics topics are introduced in sections launched by recognizable phrases. Most sections deal with the subtypes of Rājayoga and their effects, but others also cover topics like yogic physiology, the importance of the guru, the concept of the Āvadhūta and cosmogony.
+The \textit{Yogatattvabindu} is a premodern Sanskrit Yoga text on Rājayoga that was written in the first half of the seventeenth century\footnote{The dating of the text is discussed on p.\pageref{dating}.} in northern India.\footnote{The detailed discussion of the place of origin is found on p.\pageref{placeoforigin}.} The most salient feature of the work that makes it historically significant is its highly differentiated taxonomy of types of Yoga. In the \textit{Yogatattvabindu}'s introduction, most manuscripts name fifteen types of Yoga, presented as methods of Rājayoga. The text is a yogic compendium written in a mix of mainly prose and 41 verses in textbook-style, where its 58 topics topics are introduced in sections launched by recognizable phrases. Most sections deal with the methods of Rājayoga and their effects, but others also cover topics like yogic physiology, the importance of the guru, the concept of the Āvadhūta and cosmogony. 
 
-The \textit{Yogatattvabindu} has not been discussed or considered in secondary literature on Yoga. The only exception is \citeauthor{birch2014} (2014: 415–416) who briefly described its list of fifteen Yogas in the context of the `fifteen medieval Yogas' and noted that a similar\footnote{My research suggests that list of fifteen Yogas in Nārāyaṇatīrtha’s \textit{Yogasiddhāntacandrikā} must be chronologically later than the ones found in the \textit{Yogatattvabindu} and its sources. As I will show in the discussion of the fifteen Yogas on p.\pageref{15yogas}, we have to assume that Nārāyaṇatīrtha saw the need to map the fifteen Yogas onto system of the \textit{Pātañjalayogaśāstra} due to their popularity among practitioners in his sphere of activity.} list occurs in Nārāyaṇatīrtha’s \textit{Yogasiddhāntacandrikā} (17th century), a commentary on the \textit{Pātañjalayogaśāstra} that integrates almost an identical taxonomy of yogas within the \textit{aṣṭāṅga} format. An incomplete account of the fifteen Yogas is found within the Sanskrit Yoga text \textit{Yogasvarodaya}, which is known only through quotations in the \textit{Prāṇatoṣinī} and \textit{Yogakarṇikā}.\footnote{Manuscripts under the name of \textit{Yogasvarodaya} seem to be lost. I was not able to allocate the manuscripts of the text in any manuscript catalogue at hand.} The \textit{Yogasvarodaya} provides a total of fifteen Yogas but names only eight of them in its introductory \textit{śloka}s. A complete account of the text is yet to be found and might be lost forever. The \textit{Yogasvarodaya} is the primary source and template for the compilation of the \textit{Yogatattvabindu}. Rāmacandra closely follows the content and structure by rewriting the \textit{Yogasvarodaya}’s \textit{śloka}s into prose. Due to the incomplete transmission of the \textit{Yogasvarodaya}, Rāmacandra’s \textit{Yogatattvabindu} is a natural and valuable starting point for an in-depth study of the taxonomy of the fifteen types of Yoga. The other source text that Rāmacandra used is the \textit{Siddhasiddhāntapaddhati} whose content he draws on, particularly in the last third of his composition. Another text that includes a similar taxonomy of twelve Yogas divided into three tetrads is Sundardās’s \textit{brāj bhāṣa} Yoga text named \textit{Sarvāṅgayogapradīpikā} which not just shares most of the types of Yogas but also many of the practices and contents found within the \textit{Yogatattvabindu} and \textit{Yogasvarodaya}.\footnote{For a comparative table of the complex Yoga taxonomies see table \ref{15yogastable} on p.\pageref{15yogastable}.}
+The textit{Yogatattvabindu} has basically not been discussed or considered in the secondary literature on yoga. The only exception is \citeauthor{birch2014} (2014: 415–416) who briefly described its list of fifteen Yogas in the context of the ``fifteen medieval Yogas'' and noted that a similar list occurs in Nārāyaṇatīrtha’s \textit{Yogasiddhāntacandrikā} (17th century), a commentary on the \textit{Pātañjalayogaśāstra} that integrates almost an identical taxonomy of Yogas within the \textit{aṣṭāṅga} format. An incomplete account of the fifteen Yogas is found within the Sanskrit Yoga text \textit{Yogasvarodaya}, which is known only through quotations in the \textit{Prāṇatoṣinī}, \textit{Yogakarṇikā} and \emph{Śabdakalpadruma}.\footnote{Manuscripts under the name of \textit{Yogasvarodaya} seem to be lost. I was not able to allocate the manuscripts of the text in any manuscript catalogue at hand.} The \textit{Yogasvarodaya} provides a total of fifteen Yogas but names only eight of them in its introductory \textit{śloka}s. A complete account of the text is yet to be found and might be lost forever. The \textit{Yogasvarodaya} is the primary source and template for the compilation of the \textit{Yogatattvabindu}. Besides several authorial passages, Rāmacandra, in many instances, follows its content and structure by rewriting the \textit{Yogasvarodaya}’s \textit{śloka}s into prose. Due to the incomplete transmission of the \textit{Yogasvarodaya}, Rāmacandra’s \textit{Yogatattvabindu} is a natural and valuable starting point for an unprecedented in-depth study of the complex early modern Yoga taxonomies, a phenomenon that can be narrowed down very precisely in terms of time. The other source text that Rāmacandra used is the \textit{Siddhasiddhāntapaddhati} whose content he draws on, particularly in the last third of his composition. Another text that includes a similar taxonomy of twelve Yogas divided into three tetrads is Sundardās’s \textit{brāj bhāṣa} Yoga text named \textit{Sarvāṅgayogapradīpikā} which not just shares most of the types of Yogas but also provides a different and valuable perspective on the addressed Yoga categories .\footnote{For a comparative table of the complex early modern Yoga taxonomies see table \ref{15yogastable} on p.\pageref{15yogastable}.}
 
-These complex taxonomies that emerged during the 16th and 17th centuries crossed sectarian divides and were adapted to the specific needs of different authors and traditions. The \textit{Yogatattvabindu} thus encapsulates a large proportion of the diversity of Yoga types and teachings after the \textit{Haṭhapradīpikā} (15th century) that were adopted by a broad spectrum of religious traditions and strata of Indian society. In the particular case of the \textit{Yogatattvabindu}, there are various statements throughout the text that reveal a strategy to detach Yoga from its renunciate connotations and to enforce the supremacy and universality of Rājayoga as a practice that can yield the highest benefits even for practitioners who enjoy worldly pleasures and an extravagant lifestyle. Textual evidence suggests the possibility that \textit{Yogatattvabindu} may be a unique example of a Rājayoga text that was composed for warrior aristocracy and members of an royal court. 
+These complex taxonomies that emerged during the 17th century crossed sectarian divides and were adapted to the specific needs of different authors and traditions. The \textit{Yogatattvabindu} thus encapsulates a large proportion of the diversity of Yoga types and teachings after the \textit{Haṭhapradīpikā} (15th century) that were adopted and practiced by a broad spectrum of religious traditions and strata of Indian society. In the particular case of the \textit{Yogatattvabindu}, there are various statements throughout the text that reveal a strategy to radically detach Yoga from its renunciate connotations and to enforce the supremacy and universality of Rājayoga as a practice that can yield the highest benefits even for practitioners who enjoy worldly pleasures and an extravagant lifestyle. Textual evidence suggests the possibility that \textit{Yogatattvabindu} may be a unique example of a Rājayoga text that was composed for warrior aristocracy and members of a royal court. 
 
 %In addition, the analysis of the \textit{Yogatattvabindu} and the historical retracig of its teachings provides insight into a complex network of at least twenty texts,\footnote{This intertextual network which shares those specific teachings consists of the \textit{Netratantra}, \textit{Śāradatilakatantra}, \textit{Sarvadurgatipariśodhanatantra}, \textit{Ūrmikaulārṇavatantra}, \textit{Tantrāloka}, \textit{Manthanabhairavatantra}, \textit{Śārṅgadhārapaddhati}, \textit{Vivekamārtaṇḍa}, \textit{Śivayogapradīpikā}, (recensions of the \textit{Haṭhapradīpikā}), \textit{Amaraughaśāsana}, \textit{Yogasvarodaya}, \textit{Sarvāṅgayogapradīpikā}, \textit{Nityanāthapaddhati}, \textit{Siddhasiddhāntapaddhati}, \textit{Yogatattvabindu}, \textit{Yogacūḍāmaṇyupaniṣad}, \textit{Maṇḍalabrāhmaṇopaniṣat}, \textit{Haṭhatattvakaumudi} and \textit{Haṭhasaṃketacandrikā}.} all of which include one specific set of yoga theorems and practices with minor deviations - three to five \textit{cakra}s, sixteen \textit{ādhāra}s, two to five \textit{lakṣya}s, and five \textit{vyoma}s. This ancient Śaiva paradigm gave rise to an intertextual network that spans at least an entire millennium. It begins in early śivaite Tantras such as the \textit{Netratantra} and ends in the large late medieval Yoga compendiums like the \textit{Haṭhatattvakaumuḍī} and \textit{Haṭhasaṅketacandrikā}. The examination of this network provides insights into the history of the related yoga traditions and enables, for example, the reconstruction of the genesis of individual yoga categories mentioned in the fifteen Yogas, such as Lakṣyayoga, whose techniques were originally taught in early śivaite Tantras, but were only labeled as a separate type of yoga from the 16th century onwards.
 
-One printed edition of the \textit{Yogatattvabindu} was published in 1905 with a Hindi translation and based on an unknown manuscript(s). This publication has the title ’\textit{Binduyoga}’ confirmed by the printed text’s colophon. However, as I discuss in the course of the introduction, the text was likely known as \textit{Yogatattvabindu}. The consulted manuscripts contain significant discrepancies, structural differences and variant readings between them and the printed edition. Furthermore, the manuscripts are scattered over the Indian subcontinent, which suggests that it was widely transmitted at some point. Lenghty passages of the \textit{Yogatattvabindu} are quoted without attribution in a text called \textit{Yogasaṃgraha} and Sundaradeva’s \textit{Haṭhasaṅketacandrikā}. A critical edition will undoubtedly improve on the published edition and shed further light on the transmission of this important work.
+One printed edition of the \textit{Yogatattvabindu} was published in 1905 with a Hindi translation and based on an unknown manuscript(s). This publication has the title ``\textit{Binduyoga}'' confirmed by the printed text’s colophon. However, as I discuss in the course of the introduction, the text was likely known as \textit{Yogatattvabindu}. The consulted manuscripts contain significant discrepancies, structural differences and variant readings between them and the printed edition. Furthermore, the manuscripts are scattered over the northern Indian subcontinent and Nepal, which suggests that it was widely transmitted at some point. Lenghty passages of the \textit{Yogatattvabindu} are quoted without attribution in a text called \textit{Yogasaṃgraha} and Sundaradeva’s \textit{Haṭhasaṅketacandrikā}. A critical edition will undoubtedly improve on the published edition and shed further light on the transmission of this important work.
 
-This book contains an introduction, critical edition and annotated translation of the \textit{Yogatattvabindu}. The introduction discusses provenance, authorship and the audience of the \textit{Yogatattvabindu}. A comprehensive discussion of the taxonomy of the fifteen Yogas based on the critical edition of the \textit{Yogatattvabindu}, together with a close examination of the above-mentioned related texts with similar taxonomies, aims to establish their position within the broader history of yoga and particularly elucidates the development of Yoga traditions in the late medieval period. The remainder of the introduction contains an overview of the manuscript evidence and the editorial policies underlying the edition.
+This dissertation contains an introduction, critical edition and annotated translation of the \textit{Yogatattvabindu}. Besides an overview of the manuscript evidence and the editorial policies underlying the edition, the introduction discusses provenance, authorship and the audience of the \textit{Yogatattvabindu}. An unprecedented systematic and comprehensive comparative analysis of the complex early modern Yoga taxonomies based on the new critical edition of the \textit{Yogatattvabindu} and a novel and up-to-date examination of the texts mentioned above with similarly complex taxonomies will determine their position within the broader history of Yoga and improve our knowledge of the development of Yoga traditions in the early modern period.
 
 \section{Dating the \textit{Yogatattvabindu}}
 \label{dating}
@@ -299,11 +299,6 @@ Furthermore, \citeauthor{mallinsononline2013}\footnote{Cf. \fullcite{mallinsonon
 \chapter{The complex late-medieval yoga taxonomies}
 \label{yogas_list}
 \clearpage
-
-
-\section{The rise of diversity: The increasing complexity of Yoga teaching systems in late medieval and pre-colonial India}
-
-In diesem Kapitel soll es darum gehen, dass zwischen dem 17. und 18. Jh. in Indien parallel zu einer Populariserung des Yoga in breiten Schichten der Gesellschaft jenseits der asketischen Traditionen eine allgemeine Entwicklung zu beobachten ist, die sich in gesteigerter Komplexität äußert. In den damals zirkulierenden Texten kommt es zu einer Steiugerung der Anzahl der gelehrten Cakras, Āsanas, Kumbhakas, aber auch die Taxonomien der einzelnen Yogakategorien die gelehrt werden nehmen an Komplexität zu. 
 
 \section{The texts of the complex Yoga taxonomies}
 
@@ -2236,10 +2231,83 @@ Der Vergleich der mittelalterlichen komplexen Yogataxoniomien der vier Texte \te
 \item Sahajayoga 
 \end{enumerate}
 
-Der Grad der Unterschiedlichkeit der Taxonomien und die teils stark voneinander abweichenden Interpretationen der Yogakategorien untereinander zeigt, dass die Überlieferung kein rein auf Texte beschränktes Phänomen mit einer linearen Rezeptionsgeschichte gewesen sein kann, sondern dass diese Aufzählungen Teil eines oralen Diskurses gewesen sein dürften. Hierfür spricht, dass die Autoren der Texte, welche die komplexen frühneuzeitlichen Yogataxonomien beinhalten aus unterschiedlichen religiösen Traditionen stammen. Während Rāmacandra Paramahaṃsa, der Autor des \emph{Yogatattvabindu} als Daśanāmī Saṃnyāsī iniitiert war, der als Advaita Vedāntin trotz der Śaiva Wurzeln seiner \textit{sampradāya} einen religiösen Universalismus propagierte, entsprang der Autor des \textit{Yogasvarodaya} zweifelsfrei einem Śaiva-Milieu. Nārāyaṇatīrtha war ein berühmter \textit{saṃnyāsa} Intellektueller, geboren als Brāhmaṇa, Anhänger des Kṛṣṇa der Vidyāraṇya Schule,\footnote{Cf. \citeauthor{endo1993}, p. 41.}, und Sant Sundardās galt war ein hochgebildeter Dādūpanthī, also ein Vaiṣṇava \textit{bhakta}.\footnote{Cf. \citeauthor{horstmann2023shrine} pp. 84-87.} Es ist bemerkenswert, dass zwei der Autoren, nämlich Sundardās und Nārāyaṇatīrtha einen großen Teil ihres Lebens in Benares verbrachten. Sundardās lebte zwischen der der ersten Dekate des siebzehnten Jh. - c. 1625 CE in Benares und wurde hier in den dominanten Wissenssystemen der damaligen Zeit, unter anderem in der Ästhetik und der Tradition der Kunstdichtung (\textit{kāvya}) ausgebildet.\footnote{Cf. Ibid. p. 86.} \citeauthor{endo1993} (1993: 56) grenzt die Blütezeit von Nārāyaṇatīrtha überzeugend auf 1600-1690 CE ein \citeauthor{endo1993}. Es ist allgemeiner Konsens, dass Nārāyaṇatīrtha ebenfalls einen Großteil seines Lebens in Benares verbrachte, allerdings kann der genaue Zeitraum von keinem mir bekannten Gelehrten genauer eingegrenzt werden.\footnote{\citeauthor{penna2004}, p. 24.} Die wenigen Anhaltspunkte, die es für eine Lokalisierung Rāmacandra's und das \textit{Yogatattvabindu} gibt, grenzen den Ort der Niederschrift weitestgehend auf den nördlichen Teil Indiens ein. Da das \textit{Yogasvarodaya} nur aus Zitaten bekannt ist, nämlich im \textit{Prāṇatoṣinī} verfasst in der Nähe von Kalkutta\footnote{Cf. \citeauthor{shastri1905} 1905.}, der \emph{Yogakarṇikā}, deren Ursprung unbekannt ist,\footnote{Die einzige erhältliche Druckausgabe der \emph{Yogakarṇikā} von \citeauthor{yogakarnika} (2004) von basiert allerdings auf einem vermutlich aus Benares stammenden Manuskript, cf. \citeauthor{yogakarnika} 2004, p. \lowroman{6}.} und dem \citetitle{shabdakalpadruma}, welches von Radhakanta Deva (1784-1867) ebenfalls in Kalkutta verfasst wurde, kann hierzu nur gesagt werden, dass basierend auf den Werken, welche das \textit{Yogasvarodaya} zitieren, das Hauptzirkulationsgebiet Nordostindien eingegrenzt ist. Da Rāmacandra für die Kompilation des \textit{Yogatattvabindu}s großzügig aus dem \textit{Yogasvarodaya} schöpft, und die fünfzehn Yogas offenbar Teil eines oralen und literarischen Diskurses war, der in Benares zusammenläuft, wäre es durchaus plausibel, dass auch Rāmacandra und/oder der Autor des \textit{Yogasvarodaya} ebenfalls Teil dieses oralen Diskurses waren, der rund um Benares sein Zentrum zu haben scheint. Basierend auf der mir vorliegenden Evidenz, erscheint mir diese Lokalisierung am wahrscheinlichsten, auch wenn diese Hypothese bis auf Weiteres als spekulativ zu gelten hat. Fest steht allerdings, dass das \textit{Yogatattvabindu} und das \textit{Yogasvarodaya} beide, wie gezeigt worden ist,\footnote{Die Datierung des \textit{Yogatattvabindu} und des \textit{Yogasvarodaya} findet sich auf p.\pageref{datierung}.} vor 1659 CE geschrieben worden sein müssen. Somit entstanden alle komplexen frühneuzeitlichen Yogataxonomien in einem sehr engen Zeitraum zwischen 1600-1690, und die Hälfte, vielleicht sogar alle, im diskursiven Umfeld von Benares. Dieser Umstand ist ein wichtiges Indiz für Rückschlüsse darüber, aus welchem Grund sich ausgerechnet im diesem Zeitraum und ausgereichnet in diesem eingegrenzten Gebiet die komplexen Yogataxonomien entwickelten. Sicherlich existieren zunächst von Autor zu Autor und Text zu Text individuelle Gründe für die Auseinandersetzung bzw. die Kodifizierung der komplexen Yogataxonomien. Rāmacandra's Text richtete allem Anschein nach an die Ausbildung junger Prinzen und die Taxonomie erfüllt hier einerseits den Zweck einer Enzyklopädie, gleichzeitig soll dem Publikum die Superiorität des Rājayoga und seiner Methoden vermittelt werden. Die Integration der fünfzehnfachen Yogataxonomie des \textit{Yogasvarodaya} ist zweifelsohne eine Fortsetzung des ältere Śaiva Strategems, welches darin bestand die Yogas aus verschiedenen Traditionen in ein hierarchisches Schema zu integrieren, in dem eine Śaiva-Interpretation von \textit{samādhi} und die Befreiung im Leben (\textit{jīvanmukti} in den Vordergrund gestellt wurden.\footnote{The Śaiva subordination of Yogas into a Rājayoga model began after the 10th century CE was frist described by \citeautor{birch2019}.} Es handelt sich somit grundsätzliches um eine Erweiteruzng der älteren vierfachen Taxonomie, welche Mantra-, Laya- und Haṭhayoga in hierarchischer Abfolge dem Rājayoga unterordnet, bzw. diesem zuordnet. Im Falle der \textit{Yogasiddhāntacandrikā} vermutet \citeauthor{endo1998} (1998: 34-35) 
+Der Grad der Unterschiedlichkeit der Taxonomien und die teils stark voneinander abweichenden Interpretationen der Yogakategorien untereinander zeigt, dass die Überlieferung kein rein auf Texte beschränktes Phänomen mit einer linearen Rezeptionsgeschichte gewesen sein kann, sondern dass die komplexen Yoga Taxonomien Teil eines traditionsübergreifenden oralen Diskurses gewesen sein dürften. Hierfür spricht, dass die Autoren der Texte, welche die komplexen frühneuzeitlichen Yogataxonomien beinhalten aus völlig unterschiedlichen religiösen Traditionen stammen.
+
+Während Rāmacandra Paramahaṃsa, der Autor des \emph{Yogatattvabindu} als Daśanāmī Saṃnyāsī iniitiert war, der als Advaita Vedāntin trotz der Śaiva Wurzeln seiner \textit{sampradāya} einen religiösen Universalismus propagierte, entsprang der Autor des \textit{Yogasvarodaya} zweifelsohne einem Śaiva-Milieu. Nārāyaṇatīrtha war ein berühmter \textit{saṃnyāsa} Intellektueller, ein erfolgreicher Schriftsteller geboren als Brāhmaṇa, Anhänger des Kṛṣṇa und Vertreter der Vidyāraṇya Schule,\footnote{Cf. \citeauthor{endo1993}, p. 41.}, und Sant Sundardās galt als einer der hochgebildetsten Dādūpanthīs überhaupt, in seinen Werken propagiert er das Sant Glaubenssystem als Vertreter des Vaiṣṇava \textit{bhakta}.\footnote{Cf. \citeauthor{horstmann2023shrine} pp. 84-87.}
+
+Es ist bemerkenswert, dass zwei der Autoren, nämlich Sundardās und Nārāyaṇatīrtha einen großen Teil ihres Lebens in Benares verbrachten. Sundardās lebte zwischen der ersten Dekade des siebzehnten Jh. - c. 1625 CE in Benares und wurde hier in den dominanten Wissenssystemen der damaligen Zeit, unter anderem in der Ästhetik und der Tradition der Kunstdichtung (\textit{kāvya}) ausgebildet.\footnote{Cf. Ibid. p. 86.} \citeauthor{endo1993} (1993: 56) grenzt die Blütezeit von Nārāyaṇatīrtha überzeugend auf 1600-1690 CE ein \citeauthor{endo1993}. Es ist allgemeiner Konsens, dass Nārāyaṇatīrtha ebenfalls einen Großteil seines Lebens in Benares verbrachte, allerdings kann der genaue Zeitraum von keinem mir bekannten Gelehrten genauer eingegrenzt werden.\footnote{\citeauthor{penna2004}, p. 24.} Möglicherweise lebten beide Autoren gleichzeitig in Benares.
+
+Die wenigen Anhaltspunkte, die es für eine Lokalisierung Rāmacandra's und das \textit{Yogatattvabindu} gibt, grenzen den Ort der Niederschrift weitestgehend auf den nördlichen Teil Indiens ein. Da das \textit{Yogasvarodaya} nur aus Zitaten bekannt ist, nämlich im \textit{Prāṇatoṣinī} verfasst in der Nähe von Kalkutta\footnote{Cf. \citeauthor{shastri1905} 1905.}, der \emph{Yogakarṇikā}, deren Ursprung unbekannt ist,\footnote{Die einzige erhältliche Druckausgabe der \emph{Yogakarṇikā} von \citeauthor{yogakarnika} (2004) von basiert allerdings auf einem vermutlich aus Benares stammenden Manuskript, cf. \citeauthor{yogakarnika} 2004, p. \lowroman{6}.} und dem \citetitle{shabdakalpadruma}, welches von Radhakanta Deva (1784-1867) ebenfalls in Kalkutta verfasst wurde, kann provisorisch abgeleitet werden, dass basierend auf den Werken, welche das \textit{Yogasvarodaya} zitieren, das Hauptzirkulationsgebiet Nordostindien eingegrenzt ist. Da Rāmacandra für die Kompilation des \textit{Yogatattvabindu}s großzügig aus dem \textit{Yogasvarodaya} schöpft, und seine fünfzehn Yogas offenbar Teil eines oralen und literarischen Diskurses waren, der in Benares zusammenläuft, wäre es durchaus plausibel, dass auch Rāmacandra und/oder der Autor des \textit{Yogasvarodaya} ebenfalls Teil dieses oralen Diskurses waren, der rund um Benares sein Zentrum zu haben scheint.\footnote{Darüber hinaus wird diese Lokalisierung auch durch Rāmacandra's Liste selbst befürwortet. Sein Quelltext, das \emph{Yogasvarodaya} listet nur acht von fünfzehn genannten Yogas in seinen einleitenden Versen auf und bespricht, zumindest in der uns vorliegenden Überlieferung auch nicht jedes einzelne Yoga, sodass Rāmacandra die Liste nicht einfach eins zu eins übernehmen konnte. Die Wahl der von ihm ergänzten Yogas ähnelt stark den Yogataxonomien von Nārāyaṇatīrtha und Sundardās, sodass wir davon ausgehen können, dass auch Rāmacandra teil des bereits angesprochenen zeitlich und räumlich stark eingegrenzten oralen Diskurses rund um die komplexen Yogataxonomien gewesen sein dürfte.} Basierend auf der mir vorliegenden Evidenz, erscheint mir diese Lokalisierung am wahrscheinlichsten, auch wenn diese Hypothese bis auf Weiteres als tendenziell spekulativ zu gelten hat. Fest steht allerdings, dass das \textit{Yogatattvabindu} und das \textit{Yogasvarodaya} beide, wie gezeigt worden ist,\footnote{Die Datierung des \textit{Yogatattvabindu} und des \textit{Yogasvarodaya} findet sich auf p.\pageref{datierung}.} vor 1659 CE geschrieben worden sein müssen. Somit entstanden alle komplexen frühneuzeitlichen Yogataxonomien in einem sehr eng eingegrenzten Zeitraum zwischen 1600-1690, und die Hälfte, vielleicht sogar alle, im diskursiven Umfeld von Benares. Dieser Umstand ist ein wichtiges Indiz für Rückschlüsse darüber, aus welchem Grund sich ausgerechnet im diesem Zeitraum und ausgereichnet in diesem eingegrenzten Gebiet die komplexen Yogataxonomien entwickelten.
+
+Sicherlich existieren zunächst von Autor zu Autor und Text zu Text individuelle Gründe für die Auseinandersetzung bzw. die Kodifizierung der komplexen Yogataxonomien. Rāmacandra's Text diente  allem Anschein nach der Ausbildung junger Prinzen, also potenzieller Könige und die Taxonomie erfüllt hier einerseits den Zweck einer Enzyklopädie, gleichzeitig soll dem Publikum in Form einer taxonomischen Hierarchie die Superiorität des Rājayoga und seiner Methoden vermittelt werden. Die Integration der fünfzehnfachen Yogataxonomie des \textit{Yogasvarodaya} ist zweifelsohne eine Fortsetzung eines älteren Śaiva Strategems, welches darin bestand die Yogas aus verschiedenen Traditionen in ein hierarchisches Schema zu integrieren, in dem eine Śaiva-Interpretation von \textit{samādhi} und die Befreiung im Leben (\textit{jīvanmukti} in den Vordergrund gestellt wurden.\footnote{The Śaiva subordination of Yogas into a Rājayoga model began after the 10th century CE was frist described by \citeautor{birch2019}.} Es handelt sich somit grundsätzliches um eine Erweiteruzng der älteren vierfachen Taxonomie, welche Mantra-, Laya- und Haṭhayoga in hierarchischer Abfolge dem Rājayoga unterordnet, bzw. diesem zuordnet. Im Falle der \textit{Yogasiddhāntacandrikā} vermutet \citeauthor{endo1998} (1998: 34-35), dass Nārāyaṇatīrtha die in seinem Umfeld immer populärer werdenden mittelalterlichen Yogas im Sinne von Paul \citeauthor{hacker1979}'s ``Inklusivismus'' (1979). \citeauthor{endo1998} sieht darin den Versuch Nārāyaṇatīrtha's, die als unterlegen betrachteten fremden und wahrscheinlich auch populären Formen des mittelalterlichen Yoga der eigenen Form des Yoga, hier dem Pātañjalayoga Modell nicht nur gleichzusetzen, sondern dieses Yogas eben auch dem Pātañjalayoga unterzuordnen. Sundardās \textit{Sarvāṅgayogapradīpikā} hat einen weniger instruktiven, sondern eher informellen bzw. enzyklopädischen Charakter, welcher gleichermaßen großen Wert auf Systematik und Ästhetik legt, verfolgt aber gleichermaßen eine klare Agenda, diese ist weitaus weniger hierarchisch anmutend als diejenigen Taxonomien, welche Rājayoga an die Spitze der Taxonomien stellen. Vielmehr sucht Sundardās den roten Faden, der alle Yogas eint und ordner die von ihm besungenen Yogakategorien in einer sukzessiven und logischen Abfolge, beginnend mit Vaiṣṇava \textit{bhakti}, diverse Formen der mittelalterlichen Yogas, die über die philosophische Betrachtung des Sāṃkhyayoga, in der Einheitserfahrung des Brahmayoga und schlussendlich in dem von ihm als \textit{summum bonum} betrachteten Yogazustand namens Advaitayoga mündet.
+
+Hätte er angesichts der Vervielfältigung der Yogas (insbesondere der
+Entwicklung der haṭhayogas), der verschiedenen sampradāyas und panths
+mit seinem Schema der 3 Yogas mit 12 pos- siblen Wegen auf dem Pfad der
+Nicht-Dualität, einem im Wesentlichen meditativen und in einem Sant-Kontext
+akzeptierten Pfad, Ordnung schaffen wollen? Wollte er daran erinnern oder
+betonen, dass Yoga viel mehr ist als Haṭhayoga, das während seiner und der
+unmittelbar vorausgehenden Periode wichtig wird, indem er es in einen
+breiteren Sinnzusammenhang stellt?
 
 
-von es keine einheitliche Überlieferung der fünfzehn Yogas gegeben hat. Trotz der terrotorialen und zeitlichen Nähe der Autoren der verglichenen komplexen Yogataxonomien gibt es zu viele Unterschiede in den Anordnungen der Listen und auch in Konzeptionen der einzelnen Yogas untereinander. Abgesehen von der sehr engen Korrelation der fünfzehn Yogas im \emph{Yogatattvabindu} und \textit{Yogasvarodaya}, welche dem Umstand geschuldet ist, dass Rāmacandra das \textit{Yogasvarodaya} als seine Haupttextvorlage zur Kompilation seines eigenen Textes verwendete, gibt es keine direkt Verbindung zwischen den einzelnen Taxonomien. Die sehr unterschiedlichen religiösen Hintergründe der Autoren der Text, welche die komplexen mittelalterlichen Taxonomien beinhalten suggerieren, dass die komplexen Taxonomien fluide und offene Kontrukte waren. Die unterschiedlichen Ausprägungen der Listen zeugen, dass die komplexen Taxonomien in verschiedenen Kontexten diskutiert, entsprechend umstrukturiret, und, die einzelnen Yogas, je nach Kontext mit anderen Bedeutungen gefüllt wurden.
+Diese Vielfalt, die sich in den komplexen Taxonomien wiederspiegelt ist belegt einen regelrechten traditionsübergreifenden Yogaboom im Umfeld der betrachteten Autoren, eine bisher noch nie dagewesene Welle der Populariät, vor allem der mittelalterlichen und körperorientierten Yogaformen wie Haṭhayoga. Diese Popularität durchdrang zu diesem Zeitpunkt und in einem diskursiv offenbar klar abgegrenzten Bereich alle Gesellschaftsschichten. Dem Yoga und dessen Wirksamkeit wurde solch eine immense Bedeutung begemeissen, dass Yoga auch im Curriculum der herrschenden Klassen nicht fehlen durfte! Es zeigt sich, dass die Bedeutungen vielfältigen Yogakategorien sehr fluide waren und in lebhaften und dynamischen Austauschprozessen diskursiv ausgehandelt wurden. Es ist daher überaus einleuchtend, dass sich dass Phänomen der frühneuzeitlichen komplexen Yogataxonomien nur auf einem geeigneten Nährboden ereignet haben kann. Dies ist nachweislich ein Schmelztigel des intellektuellen und religiösen Austauschs der hinduistischen Religionen \textit{par excellance}, nämlich Benares.  
+
+
+
+In the 16th century, Varanasi experienced a cultural revival under the Muslim Mughal emperor Akbar who invested in the city, and built two large temples dedicated to Shiva and Vishnu.[27][30] The Raja of Poona established the Annapurnamandir and the 200 metres (660 ft) Akbari Bridge was also completed during this period.[35] The earliest tourists began arriving in the city during the 16th century.[36] In 1665, the French traveller Jean Baptiste Tavernier described the architectural beauty of the Vindu Madhava temple on the side of the Ganges. The road infrastructure was also improved during this period and extended from Kolkata to Peshawar by Emperor Sher Shah Suri; later during the British Raj it came to be known as the famous Grand Trunk Road.
+
+hier auch noch die Kumbhakapaddhati nennen!!
+hier auch boom der Yogapositionen nennen! proliferation!
+hier auch Jim Artikel Vajrolimudra ... yoga für Haushältes nennen!
+Hier auch boom der Cakrasystem nennen usw. ..
+
+INsgesamt gab es dieses Phänomen, die Diskussion der Yogakategorien ist allerdings primär auf den intellektuellen Diskurs von Benares zurückzuführen! 
+
+The rise of diversity: The increasing complexity of Yoga teaching systems in late medieval and pre-colonial India
+
+In diesem Kapitel soll es darum gehen, dass zwischen dem 17. und 18. Jh. in Indien parallel zu einer Populariserung des Yoga in breiten Schichten der Gesellschaft jenseits der asketischen Traditionen eine allgemeine Entwicklung zu beobachten ist, die sich in gesteigerter Komplexität äußert. In den damals zirkulierenden Texten kommt es zu einer Steiugerung der Anzahl der gelehrten Cakras, Āsanas, Kumbhakas, aber auch die Taxonomien der einzelnen Yogakategorien die gelehrt werden nehmen an Komplexität zu. 
+
+
+Am Ende dieser Reise möchte man natürlich gerne etwas mehr über Sundardās
+Absichten und Ziele erfahren. Warum diese drei Yogas, warum die
+Unterteilungen? Abgesehen von den Erklärungen, die er selbst gibt und die
+zeigen, dass seine Wahl auf der Frage der Nicht-Dualität und auf inneren Praktiken
+beruht, die zu diesem Zustand der radikalen Distanzierung von der Welt führen
+können, ist es schwierig, weiter zu gehen. Der Autor steht in den Traditionen,
+die er nutzt, um seine eigene Klassifizierung herbeizuführen.63 Gewiss, seine
+Einteilung in drei große Yogakategorien erinnert an die in der Bhagavad Gītā
+vorgeschlagene Einteilung von bhakti, karma und jñānayoga. In seiner
+Klassifizierung wäre Karma haṭhayoga, jñāna wäre sāṃkhya und bhakti wäre bhakti.
+Die drei für Sundardās wichtigen Yogas sind allgemein genug, um viele Traditionen zu
+umfassen. Auch wenn man nicht mit Sicherheit sagen kann, ob Sundardās diesen
+Bezug im Sinn hatte, kann man festhalten, dass er ein ausreichend informierter
+Autor ist, um sich in theologischen Debatten prominent positionieren zu wollen,
+und dass er den Quellen64 zufolge in Benares die Vaiṣṇava-Tradition studiert haben
+soll. Hätte er angesichts der Vervielfältigung der Yogas (insbesondere der
+Entwicklung der haṭhayogas), der verschiedenen sampradāyas und panths
+mit seinem Schema der 3 Yogas mit 12 pos- siblen Wegen auf dem Pfad der
+Nicht-Dualität, einem im Wesentlichen meditativen und in einem Sant-Kontext
+akzeptierten Pfad, Ordnung schaffen wollen? Wollte er daran erinnern oder
+betonen, dass Yoga viel mehr ist als Haṭhayoga, das während seiner und der
+unmittelbar vorausgehenden Periode wichtig wird, indem er es in einen
+breiteren Sinnzusammenhang stellt?
+
+
+
+n the sixteenth and seventeenth centuries, on the one hand there appears to
+have been a tendency towards the establishing of a distinct ‘Hindu’ identity, while on the
+other there was also an apparent tendency—in the consciousness of
+difference—towards religious universalisation, a process that came to successful fruition
+during the following two centuries.
+
+
+ the sixteenth and seventeenth centuries, on the one hand there appears to
+have been a tendency towards the establishing of a distinct ‘Hindu’ identity, while on the
+other there was also an apparent tendency—in the consciousness of
+difference—towards religious universalisation, a process that came to successful fruition
+during the following two centuries.
+
 
 die über  Rāmacandra als Paramahaṃsa der Daśanāmī Saṃnyāsīs, dem es offenbar ein Anliegen war die Śaivaterminologie des \textit{Yogasvarodaya}'s zu vermeiden,  
 
@@ -2280,5 +2348,8 @@ have been a tendency towards the establishing of a distinct ‘Hindu’ identity
 other there was also an apparent tendency—in the consciousness of
 difference—towards religious universalisation, a process that came to successful fruition
 during the following two centuries.
+
+Die Vielfalt der Yogas belegt einen regelrechten traditionsübergreifenden Yogaboom, eine bisher noch nie dagewesene Welle der Populariät, vor allem der mittelalterlichen und KÖRPERorientierten Yogas. Diese Popularität durchdrang alle Gesellschaftsschichten. Dem Yoga und dessen Wirksamkeit wurde solch eine immense Bedeutung begemeissen, dass dies auch im Curriculum der herrschenden Klassen nicht fehlen durfte! 
+
 \end{document}
 
